--- a/web/public/locales/en.json
+++ b/web/public/locales/en.json
@@ -1424,7 +1424,7 @@
     },
     "US-NE-ISNE": {
       "countryName": "USA",
-      "zoneName": "New England ISO"
+      "zoneName": "ISO New England"
     },
     "US-NW-AVA": {
       "countryName": "USA",
