--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -1757,7 +1757,7 @@
     },
     "US": {
       "zoneName": "Contiguous United States",
-      "seoZoneName": "United States of America - USA"
+      "seoZoneName": "United States of America - U.S."
     },
     "US-AK": {
       "countryName": "USA",
