tranlate "methodologies-and-data-sources"

--- a/web/src/locales/fr.json
+++ b/web/src/locales/fr.json
@@ -228,7 +228,10 @@
       "flowtracing": "Electricity Maps - Traçage des flux",
       "title": "Méthologies utilisées"
     },
-    "get-data": "Voir nos offres commerciales d'API"
+    "get-data": "Voir nos offres commerciales d'API",
+    "methodologies-and-data-sources": {
+      "title": "Méthodologies et sources des données"
+    }
   },
   "header": {
     "get-data": "Obtenez nos données",
