--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -16,6 +16,7 @@
     "no-results": "No results found for this search 🌍"
   },
   "button": {
+    "bluesky-share": "Check real-time global electricity emissions data: {{baseUrl}}",
     "reddit": "Join r/electricitymaps",
     "reddit-share": "Share on Reddit",
     "github": "Contribute on GitHub",
