Feat: New Feature Popover (#7302)
* feat: add new feature popover
- adds new feature component
- adds content for data picker popover
- adds content for new price popover

* chore: code reorganization

* refactor: remove isLoadingMap check and use feature flag

* feat: use ff and modify for historical storytelling

* fix: popover sizing mobile

* feat: use specific ff for popover

* fix lockfile

* fix: cypress tests

* update test and icon for historical storytelling popover

* fix: popover margin

---------

Co-authored-by: Cadence <cadence@Cadences-MacBook-Pro.local>

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -57,6 +57,10 @@
     "preliminary-data": "Preliminary data may change over time.",
     "summary": "Discover real-time electricity insights with the Electricity Maps app!"
   },
+  "new-feature-popover": {
+    "title": "Share granular historical insights",
+    "content": "Explore historical hourly carbon intensity and energy mix. Use the buttons to navigate through time by 24 hours and share specific dates via the zone dropdown menu."
+  },
   "onboarding-modal": {
     "view1": {
       "header": "Welcome to Electricity Maps",
