feat(web): add redirect toast for links older than 30 days (#7476)
* add redirect toast

* fix: redirect to real time

* Update web/src/locales/en.json

Co-authored-by: Tony <tony.vanswet@electricitymaps.com>

* Update web/src/features/time/DateRedirectToast.tsx

Co-authored-by: Tony <tony.vanswet@electricitymaps.com>

* add title

---------

Co-authored-by: Tony <tony.vanswet@electricitymaps.com>

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -251,6 +251,10 @@
       "daily": "30d",
       "monthly": "12mo",
       "yearly": "all"
+    },
+    "date-unavailable": {
+      "title": "Date unavailable",
+      "description": "Redirecting to live data"
     }
   },
   "left-panel": {
