change button style and text

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -270,9 +270,9 @@
     }
   },
   "header": {
-    "get-data": "Get our data",
+    "get-data": "Access the API",
     "blog": "Blog",
-    "open-source": "Open Source",
+    "open-source": "Community",
     "hiring": "We're hiring!",
     "methodology": "Methodology",
     "faq": "FAQ"
