--- a/web/src/locales/es.json
+++ b/web/src/locales/es.json
@@ -1,7 +1,8 @@
 {
   "info": {
     "text": "La app Electricity Maps provee información en tiempo real web y móvil para ciudadanos, expertos en energía, ONG y legisladores que promueven un mejor entendimiento de los desafíos de la transición energética.",
-    "open-source-text": "Esta app es de <a href='{{link}}' target='_blank'>código abierto</a> e impulsada por la comunidad."
+    "open-source-text": "Esta app es de <a href='{{link}}' target='_blank'>código abierto</a> e impulsada por la comunidad.",
+    "share-app": "Compartir la aplicación"
   },
   "button": {
     "feedback": "Comparte tus comentarios",
