--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -237,6 +237,7 @@
   "time-controller": {
     "title": {
       "hourly": "Hourly data for:",
+      "hourly_72": "72 hour data for:",
       "daily": "Daily data for:",
       "monthly": "Monthly data for:",
       "yearly": "Yearly data for:"
@@ -247,6 +248,7 @@
     "yearly": "yearly",
     "historical-linking": {
       "hourly": "24h",
+      "hourly_72": "72h",
       "daily": "30d",
       "monthly": "12mo",
       "yearly": "all"
@@ -280,48 +282,56 @@
   "country-history": {
     "carbonintensity": {
       "hourly": "Hourly carbon intensity",
+      "hourly_72": "Hourly carbon intensity",
       "daily": "Daily carbon intensity",
       "monthly": "Monthly carbon intensity",
       "yearly": "Yearly carbon intensity"
     },
     "emissions": {
       "hourly": "Hourly carbon emissions",
+      "hourly_72": "Hourly carbon emissions",
       "daily": "Daily carbon emissions",
       "monthly": "Monthly carbon emissions",
       "yearly": "Yearly carbon emissions"
     },
     "emissionsorigin": {
       "hourly": "Hourly carbon emission origin",
+      "hourly_72": "Hourly carbon emission origin",
       "daily": "Daily carbon emission origin",
       "monthly": "Monthly carbon emission origin",
       "yearly": "Yearly carbon emission origin"
     },
     "emissionsproduction": {
       "hourly": "Hourly production emissions",
+      "hourly_72": "Hourly production emissions",
       "daily": "Daily production emissions",
       "monthly": "Monthly production emissions",
       "yearly": "Yearly production emissions"
     },
     "electricityorigin": {
       "hourly": "Hourly electricity origin",
+      "hourly_72": "Hourly electricity origin",
       "daily": "Daily electricity origin",
       "monthly": "Monthly electricity origin",
       "yearly": "Yearly electricity origin"
     },
     "electricityproduction": {
       "hourly": "Hourly electricity production",
+      "hourly_72": "Hourly electricity production",
       "daily": "Daily electricity production",
       "monthly": "Monthly electricity production",
       "yearly": "Yearly electricity production"
     },
     "electricityprices": {
       "hourly": "Hourly electricity prices",
+      "hourly_72": "Hourly electricity prices",
       "daily": "Daily electricity prices",
       "monthly": "Monthly electricity prices",
       "yearly": "Yearly electricity prices"
     },
     "netExchange": {
       "hourly": "Hourly net exchange",
+      "hourly_72": "Hourly net exchange",
       "daily": "Daily net exchange",
       "monthly": "Monthly net exchange",
       "yearly": "Yearly net exchange"
