translations(web): Change get our data to Access the API

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -272,7 +272,7 @@
     }
   },
   "header": {
-    "get-data": "Get our data",
+    "get-data": "Access the API",
     "blog": "Blog",
     "open-source": "Open Source",
     "hiring": "We're hiring!",
