migrate fully to 24h

--- a/web/src/locales/de.json
+++ b/web/src/locales/de.json
@@ -76,15 +76,15 @@
   },
   "time-controller": {
     "title": {
-      "hourly": "Stündliche Daten für:",
-      "daily": "Tägliche Daten für:",
-      "monthly": "Monatliche Daten für:",
-      "yearly": "Jährliche Daten für:"
+      "24h": "Stündliche Daten für:",
+      "30d": "Tägliche Daten für:",
+      "12mo": "Monatliche Daten für:",
+      "all": "Jährliche Daten für:"
     },
-    "daily": "täglich",
-    "hourly": "stündlich",
-    "monthly": "monatlich",
-    "yearly": "jährlich"
+    "30d": "täglich",
+    "24h": "stündlich",
+    "12mo": "monatlich",
+    "all": "jährlich"
   },
   "estimation-badge": {
     "partially-estimated": "Teilweise geschätzt",
