--- a/web/src/locales/es.json
+++ b/web/src/locales/es.json
@@ -117,15 +117,15 @@
   },
   "time-controller": {
     "title": {
-      "hourly": "Datos horarios para:",
-      "daily": "Datos diarios para:",
-      "monthly": "Datos mensuales para:",
-      "yearly": "Datos anuales para:"
+      "24h": "Datos horarios para:",
+      "30d": "Datos diarios para:",
+      "12mo": "Datos mensuales para:",
+      "all": "Datos anuales para:"
     },
-    "daily": "diario",
-    "hourly": "horario",
-    "monthly": "mensual",
-    "yearly": "anual"
+    "30d": "diario",
+    "24h": "horario",
+    "12mo": "mensual",
+    "all": "anual"
   },
   "ranking-panel": {
     "title": "Impacto climático por zona",
