--- a/web/src/locales/ro.json
+++ b/web/src/locales/ro.json
@@ -37,15 +37,15 @@
   },
   "time-controller": {
     "title": {
-      "hourly": "Date orare pentru:",
-      "daily": "Date zilnice pentru:",
-      "monthly": "Date lunare pentru:",
-      "yearly": "Date anuale pentru:"
+      "24h": "Date orare pentru:",
+      "30d": "Date zilnice pentru:",
+      "12mo": "Date lunare pentru:",
+      "all": "Date anuale pentru:"
     },
-    "daily": "pe zi",
-    "hourly": "pe oră",
-    "monthly": "pe luna",
-    "yearly": "pe an"
+    "30d": "pe zi",
+    "24h": "pe oră",
+    "12mo": "pe luna",
+    "all": "pe an"
   },
   "ranking-panel": {
     "title": "Impact asupra climei în funcție de zonă",
