--- a/web/src/locales/ru.json
+++ b/web/src/locales/ru.json
@@ -16,10 +16,10 @@
     "now": "Сейчас"
   },
   "time-controller": {
-    "daily": "по дням",
-    "hourly": "по часам",
-    "monthly": "по месяцам",
-    "yearly": "по годам"
+    "30d": "по дням",
+    "24h": "по часам",
+    "12mo": "по месяцам",
+    "all": "по годам"
   },
   "ranking-panel": {
     "title": "Влияние зон на климат",
