--- a/web/src/locales/it.json
+++ b/web/src/locales/it.json
@@ -66,15 +66,15 @@
   },
   "time-controller": {
     "title": {
-      "hourly": "Dati orari per:",
-      "daily": "Dati giornalieri per:",
-      "monthly": "Dati mensili per:",
-      "yearly": "Dati annuali per:"
+      "24h": "Dati orari per:",
+      "30d": "Dati giornalieri per:",
+      "12mo": "Dati mensili per:",
+      "all": "Dati annuali per:"
     },
-    "daily": "giornaliero",
-    "hourly": "orario",
-    "monthly": "mensile",
-    "yearly": "annuale"
+    "30d": "giornaliero",
+    "24h": "orario",
+    "12mo": "mensile",
+    "all": "annuale"
   },
   "ranking-panel": {
     "title": "Impatto climatico per area",
