--- a/web/src/locales/nl.json
+++ b/web/src/locales/nl.json
@@ -162,14 +162,14 @@
   },
   "time-controller": {
     "title": {
-      "daily": "Dagelijkse gegevens voor:",
-      "monthly": "Maandelijkse gegevens voor:",
-      "yearly": "Jaarlijkse gegevens voor:"
+      "30d": "Dagelijkse gegevens voor:",
+      "12mo": "Maandelijkse gegevens voor:",
+      "all": "Jaarlijkse gegevens voor:"
     },
-    "daily": "dagelijks",
-    "hourly": "per uur",
-    "monthly": "maandelijks",
-    "yearly": "jaarlijks"
+    "30d": "dagelijks",
+    "24h": "per uur",
+    "12mo": "maandelijks",
+    "all": "jaarlijks"
   },
   "left-panel": {
     "get-data": "Bekijk onze commerciële API-aanbiedingen",
@@ -190,52 +190,52 @@
   },
   "country-history": {
     "carbonintensity": {
-      "hourly": "Uurlijkse koolstofintensiteit",
-      "daily": "Dagelijkse koolstofintensiteit",
-      "monthly": "Maandelijkse koolstofintensiteit",
-      "yearly": "Jaarlijkse koolstofintensiteit"
+      "24h": "Uurlijkse koolstofintensiteit",
+      "30d": "Dagelijkse koolstofintensiteit",
+      "12mo": "Maandelijkse koolstofintensiteit",
+      "all": "Jaarlijkse koolstofintensiteit"
     },
     "emissions": {
-      "hourly": "Uurlijkse koolstofemissies",
-      "daily": "Dagelijkse koolstofemissies",
-      "monthly": "Maandelijkse koolstofemissies",
-      "yearly": "Jaarlijkse koolstofemissies"
+      "24h": "Uurlijkse koolstofemissies",
+      "30d": "Dagelijkse koolstofemissies",
+      "12mo": "Maandelijkse koolstofemissies",
+      "all": "Jaarlijkse koolstofemissies"
     },
     "emissionsorigin": {
-      "hourly": "Uurlijkse oorsprong van koolstofemissies",
-      "daily": "Dagelijkse oorsprong van koolstofemissies",
-      "monthly": "Maandelijkse oorsprong van koolstofemissies",
-      "yearly": "Jaarlijkse oorsprong van koolstofemissies"
+      "24h": "Uurlijkse oorsprong van koolstofemissies",
+      "30d": "Dagelijkse oorsprong van koolstofemissies",
+      "12mo": "Maandelijkse oorsprong van koolstofemissies",
+      "all": "Jaarlijkse oorsprong van koolstofemissies"
     },
     "emissionsproduction": {
-      "hourly": "Uurlijkse productie-emissies",
-      "daily": "Dagelijkse productie-emissies",
-      "monthly": "Maandelijkse productie-emissies",
-      "yearly": "Jaarlijkse productie-emissies"
+      "24h": "Uurlijkse productie-emissies",
+      "30d": "Dagelijkse productie-emissies",
+      "12mo": "Maandelijkse productie-emissies",
+      "all": "Jaarlijkse productie-emissies"
     },
     "electricityorigin": {
-      "hourly": "Uurlijkse oorsprong van elektriciteit",
-      "daily": "Dagelijkse oorsprong van elektriciteit",
-      "monthly": "Maandelijkse oorsprong van elektriciteit",
-      "yearly": "Jaarlijkse oorsprong van elektriciteit"
+      "24h": "Uurlijkse oorsprong van elektriciteit",
+      "30d": "Dagelijkse oorsprong van elektriciteit",
+      "12mo": "Maandelijkse oorsprong van elektriciteit",
+      "all": "Jaarlijkse oorsprong van elektriciteit"
     },
     "electricityproduction": {
-      "hourly": "Uurlijkse elektriciteitsproductie",
-      "daily": "Dagelijkse elektriciteitsproductie",
-      "monthly": "Maandelijkse elektriciteitsproductie",
-      "yearly": "Jaarlijkse elektriciteitsproductie"
+      "24h": "Uurlijkse elektriciteitsproductie",
+      "30d": "Dagelijkse elektriciteitsproductie",
+      "12mo": "Maandelijkse elektriciteitsproductie",
+      "all": "Jaarlijkse elektriciteitsproductie"
     },
     "electricityprices": {
-      "hourly": "Uurlijkse elektriciteitsprijzen",
-      "daily": "Dagelijkse elektriciteitsprijzen",
-      "monthly": "Maandelijkse elektriciteitsprijzen",
-      "yearly": "Jaarlijkse elektriciteitsprijzen"
+      "24h": "Uurlijkse elektriciteitsprijzen",
+      "30d": "Dagelijkse elektriciteitsprijzen",
+      "12mo": "Maandelijkse elektriciteitsprijzen",
+      "all": "Jaarlijkse elektriciteitsprijzen"
     },
     "netExchange": {
-      "hourly": "Uurlijkse netto-uitwisseling",
-      "daily": "Dagelijkse netto-uitwisseling",
-      "monthly": "Maandelijkse netto-uitwisseling",
-      "yearly": "Jaarlijkse netto-uitwisseling"
+      "24h": "Uurlijkse netto-uitwisseling",
+      "30d": "Dagelijkse netto-uitwisseling",
+      "12mo": "Maandelijkse netto-uitwisseling",
+      "all": "Jaarlijkse netto-uitwisseling"
     },
     "not-enough-data": "Niet genoeg gegevens beschikbaar om grafiek weer te geven"
   },
