--- a/web/src/locales/sv.json
+++ b/web/src/locales/sv.json
@@ -195,15 +195,15 @@
   },
   "time-controller": {
     "title": {
-      "hourly": "Timvis data för:",
-      "daily": "Dagsvis data för:",
-      "monthly": "Månadsvis data för:",
-      "yearly": "Årsvis data för:"
+      "24h": "Timvis data för:",
+      "30d": "Dagsvis data för:",
+      "12mo": "Månadsvis data för:",
+      "all": "Årsvis data för:"
     },
-    "daily": "dagvis",
-    "hourly": "timvis",
-    "monthly": "månadsvis",
-    "yearly": "årsvis"
+    "30d": "dagvis",
+    "24h": "timvis",
+    "12mo": "månadsvis",
+    "all": "årsvis"
   },
   "ranking-panel": {
     "title": "Klimatpåverkan per region",
@@ -229,52 +229,52 @@
   },
   "country-history": {
     "carbonintensity": {
-      "hourly": "Timvis koldioxidintensitet",
-      "daily": "Daglig koldioxidintensitet",
-      "monthly": "Månadsvis koldioxidintensitet",
-      "yearly": "Årlig koldioxidintensitet"
+      "24h": "Timvis koldioxidintensitet",
+      "30d": "Daglig koldioxidintensitet",
+      "12mo": "Månadsvis koldioxidintensitet",
+      "all": "Årlig koldioxidintensitet"
     },
     "emissions": {
-      "hourly": "Timvisa koldioxidutsläpp",
-      "daily": "Dagliga koldioxidutsläpp",
-      "monthly": "Månadsvisa koldioxidutsläpp",
-      "yearly": "Årliga koldioxidutsläpp"
+      "24h": "Timvisa koldioxidutsläpp",
+      "30d": "Dagliga koldioxidutsläpp",
+      "12mo": "Månadsvisa koldioxidutsläpp",
+      "all": "Årliga koldioxidutsläpp"
     },
     "emissionsorigin": {
-      "hourly": "Timvis ursprung av koldioxidutsläpp",
-      "daily": "Dagligt ursprung av koldioxidutsläpp",
-      "monthly": "Månadsvis ursprung av koldioxidutsläpp",
-      "yearly": "Årligt ursprung av koldioxidutsläpp"
+      "24h": "Timvis ursprung av koldioxidutsläpp",
+      "30d": "Dagligt ursprung av koldioxidutsläpp",
+      "12mo": "Månadsvis ursprung av koldioxidutsläpp",
+      "all": "Årligt ursprung av koldioxidutsläpp"
     },
     "emissionsproduction": {
-      "hourly": "Timvisa produktionsutsläpp",
-      "daily": "Dagliga produktionsutsläpp",
-      "monthly": "Månadsvisa produktionsutsläpp",
-      "yearly": "Årliga produktionsutsläpp"
+      "24h": "Timvisa produktionsutsläpp",
+      "30d": "Dagliga produktionsutsläpp",
+      "12mo": "Månadsvisa produktionsutsläpp",
+      "all": "Årliga produktionsutsläpp"
     },
     "electricityorigin": {
-      "hourly": "Timvis ursprung av elektricitet",
-      "daily": "Dagligt ursprung av elektricitet",
-      "monthly": "Månadsvis ursprung av elektricitet",
-      "yearly": "Årligt ursprung av elektricitet"
+      "24h": "Timvis ursprung av elektricitet",
+      "30d": "Dagligt ursprung av elektricitet",
+      "12mo": "Månadsvis ursprung av elektricitet",
+      "all": "Årligt ursprung av elektricitet"
     },
     "electricityproduction": {
-      "hourly": "Timvis elproduktion",
-      "daily": "Daglig elproduktion",
-      "monthly": "Månadsvis elproduktion",
-      "yearly": "Årlig elproduktion"
+      "24h": "Timvis elproduktion",
+      "30d": "Daglig elproduktion",
+      "12mo": "Månadsvis elproduktion",
+      "all": "Årlig elproduktion"
     },
     "electricityprices": {
-      "hourly": "Timvisa elpriser",
-      "daily": "Dagliga elpriser",
-      "monthly": "Månadsvisa elpriser",
-      "yearly": "Årliga elpriser"
+      "24h": "Timvisa elpriser",
+      "30d": "Dagliga elpriser",
+      "12mo": "Månadsvisa elpriser",
+      "all": "Årliga elpriser"
     },
     "netExchange": {
-      "hourly": "Timvis nettohandel",
-      "daily": "Daglig nettohandel",
-      "monthly": "Månadsvis nettohandel",
-      "yearly": "Årlig nettohandel"
+      "24h": "Timvis nettohandel",
+      "30d": "Daglig nettohandel",
+      "12mo": "Månadsvis nettohandel",
+      "all": "Årlig nettohandel"
     },
     "not-enough-data": "Inte tillräckligt med data för att visa diagrammet"
   },
