fix: update disclaimer size and copy

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -337,7 +337,7 @@
       "yearly": "Yearly net exchange"
     },
     "not-enough-data": "Not enough data available to display chart",
-    "exchange-delay": "Exchange data can be delayed by 24h to 48h."
+    "exchange-delay": "Exchange data may be delayed by up to 48h."
   },
   "footer": {
     "foundbugs": "Found bugs or have ideas? Report them",
