Exchange Data Disclaimer (#7541)
* feat: add missing exchange disclaimer

* feat: update exchange disclaimer logic

* clean up unnecessary check

* fix: update disclaimer size and copy

---------

Co-authored-by: Tony <tony.vanswet@electricitymaps.com>

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -337,7 +337,8 @@
       "12mo": "Monthly net exchange",
       "all": "Yearly net exchange"
     },
-    "not-enough-data": "Not enough data available to display chart"
+    "not-enough-data": "Not enough data available to display chart",
+    "exchange-delay": "Exchange data may be delayed by up to 48h."
   },
   "footer": {
     "foundbugs": "Found bugs or have ideas? Report them",
