--- a/web/src/locales/it.json
+++ b/web/src/locales/it.json
@@ -1,8 +1,5 @@
 {
-  "info": {
-    "text": "L'app Electricity Maps fornisce statistiche in tempo reale su web e mobile per cittadini, esperti di energia, ONG e decisori politici promuovendo una comprensione più profonda delle sfide della transizione energetica.",
-    "open-source-text": "Questa app è <a href='{{link}}' target='_blank'>Open Source</a> ed alimentata dalla community."
-  },
+  "info": {},
   "button": {
     "feedback": "Condividi un feedback",
     "github": "Visualizza il nostro GitHub",
