change button style and text (#7529)
Co-authored-by: silkeholmebonnen <silke.bonnen@gmail.com>
Co-authored-by: Tony <tony.vanswet@electricitymaps.com>

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -275,7 +275,7 @@
   "header": {
     "get-data": "Access the API",
     "blog": "Blog",
-    "open-source": "Open Source",
+    "open-source": "Community",
     "hiring": "We're hiring!",
     "methodology": "Methodology",
     "faq": "FAQ"
