--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -215,6 +215,11 @@
       "pill": "Not realtime",
       "body": "The data for this zone is not published in realtime and only provides the total production. Both hourly production and production sources are estimated based on historical data for each production source."
     },
+    "ESTIMATED_GENERAL_PURPOSE_ZONE_MODEL": {
+      "title": "Data is always estimated",
+      "pill": "Not realtime",
+      "body": "The data for this zone is not published in realtime. The realtime data is estimated using live weather data and historical data for each production source."
+    },
     "threshold_filtered": {
       "title": "Missing data",
       "pill": "Data outage",
